# the-lathe

./: .gitignore  .lathe.md  .replit  ANALYSIS_IMPLEMENTATION_SUMMARY.md  ANALYSIS_PHASE.md  ARCHITECTURE.md  BOOTSTRAP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_SUMMARY.txt  DESIGN_IMPLEMENTATION_SUMMARY.md  DESIGN_PHASE.md  EXECUTION_UI_IMPLEMENTATION_SUMMARY.md  EXECUTION_UI_MANUAL_TESTS.md  FIX.md  IMPLEMENTATION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PHASE.md  JSON_IMPORT.md  JSON_IMPORT_SUMMARY.md  LATHE_SPEC.md  Makefile  OPENWEBUI_PUBLISH.md  PHASE_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  PROPOSAL_REVIEW_UI_MANUAL_TESTS.md  PROPOSAL_REVIEW_UX_SUMMARY.md  PUBLISH.md  PUBLISH_CHECKLIST.md  PUBLISH_FIX.md  PUBLISH_FIX_SUMMARY.txt  QUICKSTART_PUBLISH.md  QUICK_START.md  README.md  SCAFFOLD.md  SUBSYSTEMS_CHECKLIST.md  SUBSYSTEMS_SUMMARY.md  TOOL_SUMMARY.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  (+18 more)
.openhands/: setup.sh
attached_assets/: Pasted--ERRORS-ERROR-collecting-tests-test-smoke-py--177023655_1770236558274.txt  Pasted-MASTER-PROMPT-1-2-Freeze-the-Agent-Contract-tests-only-_1770247696783.txt  Pasted-MASTER-PROMPT-LATHE-APP-PORT-FIX-MEMORY-CLARIFICATION-L_1770317020794.txt  Pasted-PHASE-1-LATHE-CLI-CORE-NO-UI-NO-WEB-PROJECT-TYPE-Python_1770170248519.txt  Pasted-PHASE-2-LATHE-CLI-CONTEXT-SAFE-EXECUTION-NO-UI-PROJECT-_1770170604662.txt  Pasted-PHASE-3-LATHE-CLI-LEARNING-CONTROLLED-CHANGE-PROJECT-CO_1770170864391.txt  Pasted-PHASE-4-LATHE-CLI-REPO-AWARENESS-DB-IMMUNE-PROJECT-CONT_1770172233338.txt  (+35 more)
(+187 files in other folders)
